# aegir

./: Cargo.toml  README.md
aegir_game/: Cargo.toml
aegir_game/src/: main.rs
aegir_lib/: Cargo.toml
aegir_macros/: Cargo.toml
assets/models/ships/: starter.glb
src/: main.rs  player.rs
