[package]
name = "aegir_game"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Nigel Dunn <nigel.dunn@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="12c6fa7", default-features = false}
aegir_lib ={ path = "../aegir_lib", version = "0.1"}