[package]
name = "aegir_macros"
description = "Macros for a bevy game"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Nigel Dunn <nigel.dunn@gmail.com>"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/nigeldunn/aegir"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.1"